@@ -9,6 +9,7 @@ v0.09
 	* ADD : move trackpoints onto a road inserts the point in the road
 	* ADD : draw a lot of more things in merkaartor (by Matt Williams)
 	* ADD : draw hospital area and node
+	* ADD : nice amenity selector for nodes
 
 v0.08
 	* FIX : work with 0.5 API
